--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .main {
@@ -19,4 +20,32 @@ body {
     border-radius: 16px;
     width: 624px;
     margin: 16px;
+    padding: 32px;
+}
+
+.person {
+
+}
+
+.person__description {
+    font-size: 16px;
+    line-height: 22px;
+}
+
+.person__name {
+    font-size: 36px;
+    margin: 0;
+    font-weight: normal;
+}
+
+.person__position {
+    font-size: 18px;
+    margin: 0;
+    font-style: italic;
+    color: #545454;
+}
+
+.special {
+    color: #ED6D05;
+    font-weight: normal;
 }
